syntax = "proto3";

package user_rpc;
option go_package="./user_rpc";

message UserInfo {
  string user_name = 1;
  string user_avatar = 2;
  string user_email = 3;
  int64 user_phone = 4;
  string user_address = 5;
  string user_desc = 6;
  string user_status = 7;
  uint32 user_gender = 9;
}


message UserRegisterRequest {
  UserInfo info = 1;
  string password = 2;
}
message UserRegisterResponse{
  int64 user_id = 1;
}

message UserLoginRequest {
  string user_name = 1;
  string user_password = 2;
}
message UserLoginResponse{
  int64 user_id = 1;
  UserInfo info = 2;
}

message UserUpdateRequest {
  int64 user_id = 1;
  UserInfo info = 2;
}
message UserUpdateResponse{
  UserInfo info = 1;
}
message UserDeleteRequest {
  int64 user_id = 1;
}
message UserDeleteResponse{
  UserInfo info = 1;
}

message UserListRequest {
  int64 cur_user_id = 1;
}
message UserListResponse{
  repeated UserInfo infoes = 1;
}

message UserSearchRequest {
  string user_name = 1;
}

message UserSearchResponse{
  repeated UserInfo infoes = 1;
}

message UserInfoRequest {
  int64 user_id = 1;
}
message UserInfoResponse{
  UserInfo info = 1;
}

service User_rpc {
  rpc UserRegister (UserRegisterRequest) returns (UserRegisterResponse);
  rpc UserLogin (UserLoginRequest) returns (UserLoginResponse);
  rpc UserUpdate (UserUpdateRequest) returns (UserUpdateResponse);
  rpc UserDelete (UserDeleteRequest) returns (UserDeleteResponse);
  rpc UserList (UserListRequest) returns (UserListResponse);
  rpc UserSearch (UserSearchRequest) returns (UserSearchResponse);
  rpc UserInfo (UserInfoRequest) returns (UserInfoResponse);
}
